# weather-widget

./: .gitignore  Cargo.toml  Config.toml  LICENSE  PKGBUILD  README.md  build.rs
.github/workflows/: rust.yml
qml/: main.qml
src/: cli.rs  config.rs  lib.rs  main.rs  object.rs  state.rs  view.rs
src/api/: api.rs  domain.rs  image_buf.rs  mod.rs
src/api/domain/: current.rs  forecast.rs
tests/: api.rs  config.rs  image_buf.rs  state.rs
tests/resources/: Config.toml  current_response.json  response.json
