[package]
name = "weather-widget"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.*", features = ["json"] }
druid = { version = "0.8.3", features = ["image", "png"] }
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery", features = ["async"] }
futures = "0.3.*"
tokio = "1.34.0"
mockito = "1.2.0"
anyhow = "1.0.*"
toml = "0.8.*"
derive_builder = "0.12.0"